--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@twetch/sdk": "^0.2.6",
     "dotenv": "^8.2.0",
     "tonicpow-js": "^0.1.75",
-    "twit": "^2.2.11"
+    "twit": "^2.2.11",
+    "jsdom": "^16.3.0"
   },
   "devDependencies": {
     "prettier": "^2.0.5"
